add image api/controller

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -38,3 +38,15 @@ rules:
   - '*'
   verbs:
   - '*'
+- apiGroups:
+  - images.compute.gce
+  resources:
+  - '*'
+  verbs:
+  - '*'
+- apiGroups:
+  - compute.gce
+  resources:
+  - '*'
+  verbs:
+  - '*'
