rename api and match version to google cloud sdk library version

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -50,3 +50,10 @@ rules:
   - '*'
   verbs:
   - '*'
+- apiGroups:
+  - compute.google.golang.org
+  resources:
+  - '*'
+  - images
+  verbs:
+  - '*'
