--- a/deploy/examples/forwardingrule.yaml
+++ b/deploy/examples/forwardingrule.yaml
@@ -9,4 +9,4 @@ spec:
   IPProtocol: TCP
   portRange: "9021"
   region: us-central1
-  target: regions/us-central1/targetPools/example
+  target: https://www.googleapis.com/compute/v1/projects/<PROJECT ID>/regions/us-central1/targetPools/example
