--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: gcp-cloud-compute-operator
           # Replace this with the built image name
-          image: REPLACE_IMAGE
+          image: paulczar/gcp-cloud-compute-operator
           ports:
           - containerPort: 60000
             name: metrics
