--- a/deploy/examples/firewall.yaml
+++ b/deploy/examples/firewall.yaml
@@ -4,10 +4,10 @@ metadata:
   name: example
 spec:
   name: example-allow-http
-  description: allow ssh traffic
+  description: allow http traffic from anywhere
   allowed:
     - IPProtocol: tcp
       ports: ["80"]
-  network: https://www.googleapis.com/compute/v1/projects/<PROJECT ID>/global/networks/default
+  network: global/networks/default
   sourceRanges: ["0.0.0.0/0"]
   targetTags: ["allow-http"]
