--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -70,3 +70,9 @@ rules:
   - serviceaccountkeys
   verbs:
   - '*'
+- apiGroups:
+  - dns.google.golang.org
+  resources:
+  - '*'
+  verbs:
+  - '*'
